WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269913
[WPE][GTK] Fully disable mDNS LibWebRTC support
https://bugs.webkit.org/show_bug.cgi?id=269913
Summary
[WPE][GTK] Fully disable mDNS LibWebRTC support
Olivier Blin
Reported
2024-02-22 05:37:38 PST
In
275090@main
(c62c74690915), mDNS LibWebRTC support has been disabled for WPE and GTK in LibWebRTCNetworkManager::GetMdnsResponder(). But this is not synchronized with WebRTCProvider::isSupportingMDNS(), which is used to initialize m_shouldFilterICECandidates in PeerConnectionBackend::PeerConnectionBackend(). This triggers assertions in PeerConnectionBackend::newICECandidate().
Attachments
Add attachment
proposed patch, testcase, etc.
Olivier Blin
Comment 1
2024-02-22 05:39:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24946
EWS
Comment 2
2024-02-23 01:47:12 PST
Committed
275228@main
(a216dd6f98bf): <
https://commits.webkit.org/275228@main
> Reviewed commits have been landed. Closing PR #24946 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug