Cherry-pick 275228@main (a216dd6f98bf). https://bugs.webkit.org/show_bug.cgi?id=269913

[WPE][GTK] Fully disable mDNS LibWebRTC support
    https://bugs.webkit.org/show_bug.cgi?id=269913

    Reviewed by Philippe Normand.

    In 275090@main (c62c74690915), mDNS LibWebRTC support has been disabled
    for WPE and GTK in LibWebRTCNetworkManager::GetMdnsResponder().

    But this is not synchronized with WebRTCProvider::isSupportingMDNS(),
    which is used to initialize m_shouldFilterICECandidates in
    PeerConnectionBackend::PeerConnectionBackend().

    This triggers assertions in PeerConnectionBackend::newICECandidate().

    * Source/WebKit/WebProcess/Network/webrtc/LibWebRTCProvider.cpp:
    (WebKit::LibWebRTCProvider::LibWebRTCProvider):

    Canonical link: https://commits.webkit.org/275228@main

Canonical link: https://commits.webkit.org/274313.167@webkitglib/2.44